[gd_scene load_steps=5 format=3 uid="uid://db4tht5rdbg4f"]

[ext_resource type="Script" uid="uid://qo73fl7pfcue" path="res://src/screen_start/start_screen.gd" id="1_xgn5t"]

[sub_resource type="Animation" id="Animation_lufsh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nohf1"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lufsh"]
_data = {
&"RESET": SubResource("Animation_lufsh"),
&"fade_in": SubResource("Animation_nohf1")
}

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgn5t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 298.0
offset_right = 570.0
offset_bottom = 338.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="BossBattle" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Boss Battle"

[node name="FadePlayer" type="AnimationPlayer" parent="VBoxContainer"]
libraries = {
&"": SubResource("AnimationLibrary_lufsh")
}
autoplay = "fade_in"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/BossBattle" to="." method="_on_boss_battle_pressed"]
